Add implementation for get xDVG stack.
