# app.js
@@ -9,6 +9,7 @@ const vaultHistoricalAPYSave = require("./services/vaults/apy/save/historical-ha
 const vaultCategory = require('./services/vaults/category/handler');
 const stakeVIP = require('./services/staking/xdvg/handler');
 const stakePool = require('./services/staking/handler');
+const stakeXDvg = require('./services/staking/vipdvg/handler');
 const app = express();
 const cors = require("cors");
 const port = process.env.PORT || 8080;
@@ -64,6 +65,7 @@ async function init() {
   app.get("/staking/get-pools", (req, res) =>
     stakePool.getPools(req, res)
   );
+  app.get("/staking/get-xdvg-stake/:amount", (req, res) => stakeXDvg.getxDVGStake(req, res));
 
   app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
